google adsence added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     <title>OnlineToolkit.io</title>
     <meta name="description" content="OnlineToolkit.io is a comprehensive suite of online developer tools designed to streamline everyday tasks for developers. From JSON formatters and UUID generators to QR code creation and file conversions, this platform offers all-in-one solutions to optimize workflows." />
     <meta name="keywords" content="Developer Tools, Online Developer Toolkit, JSON Formatter, UUID Generator, QR Code Generator, Regex Tester, Password Generator, Online File Conversion Tools, PNG to PDF Converter, PDF to PNG Converter, Unix Timestamp Converter, JWT Decoder, Online Word Counter, Digital Tools for Developers, Free Developer Tools, SEO Tools for Developers, Online Utilities for Developers, ES6 Backend Tools, Microservices Backend Tools, Node.js Backend Utilities, Tailwind CSS Developer Tools, Real-time Developer Analytics, Pagination and Search Filters" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6874874045577797"
+     crossorigin="anonymous"></script>
     <meta name="author" content="OnlineToolkit.io" />
   </head>
   <body>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6874874045577797"
+     crossorigin="anonymous"></script>
+<!-- HeaderAd -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6874874045577797"
+     data-ad-slot="8351211812"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
